bases/apps/netalertx/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netalertx
  labels:
    app: netalertx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: netalertx
  template:
    metadata:
      labels:
        app: netalertx
    spec:
      hostNetwork: true
      containers:
        - name: netalertx
          image: jokobsk/netalertx:24.6.8
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 20211
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: db
              mountPath: /app/db
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: netalertx-config
        - name: db
          persistentVolumeClaim:
            claimName: netalertx-db
