bases/apps/netalertx/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: netalertx
    app.kubernetes.io/name: netalertx
    app.kubernetes.io/service: netalertx
  name: netalertx
spec:
  ports:
  - name: http
    port: 20211
    protocol: TCP
    targetPort: 20211
  selector:
    app: netalertx
  type: ClusterIP
